<resources>
    <string name="com.crashlytics.android.build_id">aa458189-7aeb-472f-b1d4-fe698309c03c</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="activation_preference_activate">Activate</string>
    <string name="activation_preference_activation_code">Support code</string>
    <string name="activation_preference_close">Close</string>
    <string name="activation_preference_contact_us">Contact us</string>
    <string name="activation_preference_correct_activation_code">You now have all paid features!</string>
    <string name="activation_preference_correct_activation_code_unlock">You have unlocked :</string>
    <string name="activation_preference_enter_activation_code">Enter support code</string>
    <string name="activation_preference_error_connecting_to_server">Cannot contact servers. Please check your Internet connection.</string>
    <string name="activation_preference_error_too_many_wrong_activation_code">If you think your code is valid and not working, please contact us for support.</string>
    <string name="activation_preference_upgrade_subscription">Upgrade subscription</string>
    <string name="activation_preference_wrong_activation_code">The activation code is not valid</string>
    <string name="activity_title_upgrade">Upgrade</string>
    <string name="app_label">Relax Melodies</string>
    <string name="app_lang">en</string>
    <string name="app_name">Relax Melodies</string>
    <string name="back_button_label">Back</string>
    <string name="beat10hz_desc">The mid alpha wave helps to calm and relax your mind after you have been active.</string>
    <string name="beat10hz_freq">Mid alpha 10Hz</string>
    <string name="beat10hz_title">Relaxation</string>
    <string name="beat20hz_desc">The beta wave is used when active concentration is needed. Can be used to help you stay focused and solve difficult problems.</string>
    <string name="beat20hz_freq">Beta 20Hz</string>
    <string name="beat20hz_title">Concentration</string>
    <string name="beat25hz_desc">The delta wave is of the lowest frequency. It helps you reach the deepest portion of your sleep cycle.</string>
    <string name="beat25hz_freq">Delta 2.5Hz</string>
    <string name="beat25hz_title">Dreamless sleep</string>
    <string name="beat4hz_desc">The low theta wave guides your brain to experience dreams while you sleep.</string>
    <string name="beat4hz_freq">Low theta 4Hz</string>
    <string name="beat4hz_title">Dreams</string>
    <string name="beat5hz_desc">The mid theta wave enables you to fall into a state of meditation which will allow you to let go of stress and relax into sleep.</string>
    <string name="beat5hz_freq">Mid theta 5Hz</string>
    <string name="beat5hz_title">Deep meditation</string>
    <string name="beat8hz_desc">The low alpha wave mimics your natural pre-sleep and pre-wake brainwave frequency. It allows for smooth transitions in and out of sleep.</string>
    <string name="beat8hz_freq">Low alpha 8Hz</string>
    <string name="beat8hz_title">Pre-sleep</string>
    <string name="brainwave_info_brainwave_type_description_binaural">"Binaural beats influence the brain in various ways. The effect of each brainwave depends on it's frequency. Stereo headphones are required to hear them due to their oscillating nature."</string>
    <string name="brainwave_info_brainwave_type_description_brainwaves">Brainwave sounds are beneficial when not conflicting with each other, for that reason only one can be selected at a time.</string>
    <string name="brainwave_info_brainwave_type_description_isochronic">"Isochronic tones influence the brain in various ways. The effect of each brainwave depends on it's frequency. No headphones are required, but the sound they produce is very subtle."</string>
    <string name="cancel">Cancel</string>
    <string name="current_subscription_label">Current plan:</string>
    <string name="dialog_label_no">No</string>
    <string name="dialog_label_yes">Yes</string>
    <string name="download_error_message">An error occurred while trying to download your content. Please check your internet connection.</string>
    <string name="download_error_title">Download error</string>
    <string name="download_sound_connecting">Connecting to service…</string>
    <string name="download_sound_downloading">Downloading</string>
    <string name="download_sound_extracting">Installing…</string>
    <string name="download_sound_premium_sound_package_name">Downloading all premium sounds</string>
    <string name="download_sound_waiting">Wait a moment…</string>
    <string name="error_dialog_button_ok">OK</string>
    <string name="error_dialog_message_store_unavailable">The store could not be reached. Please ensure it is properly installed and you are connected to the Internet.</string>
    <string name="favorite_1">Stormy Day</string>
    <string name="favorite_2">Sleepy Baby</string>
    <string name="favorite_3">Relaxing at Ocean</string>
    <string name="favorite_4">Night Ambience</string>
    <string name="favorite_5">Rainy City</string>
    <string name="favorite_6">Garden Pond</string>
    <string name="favorite_7">Seaside</string>
    <string name="favorite_8">Calming Down</string>
    <string name="favorite_activity_confirm_delete">Are you sure you want to delete \"%s\"?</string>
    <string name="favorite_activity_context_menu_delete">Delete</string>
    <string name="favorite_activity_context_menu_play">Play</string>
    <string name="favorite_activity_context_menu_set_label">Change name</string>
    <string name="favorite_activity_context_menu_title">Favorite actions</string>
    <string name="favorite_activity_delete_title">Delete ?</string>
    <string name="favorite_activity_dialog_label_save">Save</string>
    <string name="favorite_activity_dialog_label_title">Enter favorite name</string>
    <string name="favorite_activity_empty_selection">You cannot save an empty selection!</string>
    <string name="favorite_activity_error_loading_legacy">Unfortunately, you favorite sounds could not be loaded. We are sorry for the inconvenience.</string>
    <string name="favorite_meditation_text">with the \"%s\" meditation</string>
    <string name="favorite_staff_pick_afternoon_on_the_balcony">Afternoon on the porch</string>
    <string name="favorite_staff_pick_asian_sea">Asian sea</string>
    <string name="favorite_staff_pick_at_the_cottage">At the cottage</string>
    <string name="favorite_staff_pick_by_the_sea">By the sea</string>
    <string name="favorite_staff_pick_camping_by_the_river">Camping by the river</string>
    <string name="favorite_staff_pick_camping_rain">Camping rain</string>
    <string name="favorite_staff_pick_city_rain">City rain</string>
    <string name="favorite_staff_pick_deep_meditation">Deep meditation</string>
    <string name="favorite_staff_pick_downtown">Downtown</string>
    <string name="favorite_staff_pick_great_outdoors">Great outdoors</string>
    <string name="favorite_staff_pick_medieval_day">Medieval day</string>
    <string name="favorite_staff_pick_outdoor_lullaby">Outdoor lullaby</string>
    <string name="favorite_staff_pick_river_sunset">River sunset</string>
    <string name="favorite_staff_pick_space_journey">Space journey</string>
    <string name="favorite_staff_pick_underwater_odyssey">Underwater odyssey</string>
    <string name="favorite_title">Favorite</string>
    <string name="favorites_my_favorites">My favorites</string>
    <string name="favorites_staff_pick">Staff favorites</string>
    <string name="favorites_tutorial_add_meditation">Add a meditation</string>
    <string name="favorites_tutorial_create_a_favorite">Create a favorite</string>
    <string name="favorites_tutorial_mix_sounds">Mix sounds</string>
    <string name="favorites_tutorial_no_favorites">No favorites</string>
    <string name="favorites_tutorial_please_use_plus">Please use the + to save your current mix</string>
    <string name="favorites_tutorial_row_2_optional">(optional)</string>
    <string name="favorites_tutorial_row_3_user_plus_button">(use + button)</string>
    <string name="favorites_tutorial_to_add_favorites">To add favorites:</string>
    <string name="featured_category_title">Free meditation of the week</string>
    <string name="feedback_dialog_title">Would you like to tell us how to improve our app?</string>
    <string name="fidelity_dialog_message">Because of your support with your purchase of the premium package, we are giving you a free access to this new section, a value of $6.99!</string>
    <string name="fidelity_dialog_title">Premium user bonus</string>
    <string name="gift_dialog_message">Thank you for choosing our app. Here are 2 free premium sounds specially selected to help you sleep.</string>
    <string name="gift_dialog_positive_button">View new sounds</string>
    <string name="gift_dialog_review_message">We hope you will enjoy the new sounds. It would be great if you could rate our app. Thanks for letting us help you sleep better.</string>
    <string name="gift_dialog_title">Sleep better with 2 new sounds!</string>
    <string name="guided_meditation_are_only_in_english">*New content added monthly</string>
    <string name="guided_meditation_empty_list">No guided meditations found</string>
    <string name="guided_meditation_listened">Listened</string>
    <string name="guided_meditation_new">NEW</string>
    <string name="guided_meditation_tab_title">Meditations</string>
    <string name="introduction_meditation_short_description">Spend time with yourself.</string>
    <string name="learn_more">Learn more</string>
    <string name="main_activity_isochronic_no_headphones_required">No headphones required</string>
    <string name="main_activity_isochronic_tones">Isochronic tones</string>
    <string name="prefs_audio_focus_summary">Pauses sounds when another app plays audio</string>
    <string name="prefs_audio_focus_title">Use audio focus</string>
    <string name="prefs_native_media_player_summary">Try other modes if you hear a pause in sound loops</string>
    <string name="prefs_native_media_player_title">Loop correction mode</string>
    <string name="prefs_reset_sounds_summary">Reset the volume of all sounds</string>
    <string name="prefs_reset_sounds_title">Sounds volume</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="show_walkthrough_settings">Reset tips and show walkthrough</string>
    <string name="sound_label_125">Tibetan bowls</string>
    <string name="sound_label_126">Joy</string>
    <string name="subscription_7_days_free_trial_button">7 days free trial</string>
    <string name="subscription_then_per_duration">then %1$s/%2$s</string>
    <string name="subscription_tier2_textual">Save %1$s, go yearly %2$s</string>
    <string name="subscription_tier3_textual">Relax for life %1$s</string>
    <string name="timer_activity_button_custom">Custom</string>
    <string name="timer_activity_button_hour">hour</string>
    <string name="timer_activity_button_hours">hours</string>
    <string name="timer_activity_button_minutes">minutes</string>
    <string name="timer_activity_button_stop">Cancel timer</string>
    <string name="timer_activity_checkbox_stop_app">Close app when timer ends</string>
    <string name="special_offer_description">"Get Pro Access (all sounds &amp; meditations)
 for %d%% Off! Don't wait, this is our lowest price of the year. It won't last long."</string>
    <string name="special_offer_percentage_off_now">%d%% Off</string>
    <string name="special_offer_time_ticking">Time is Running Out!</string>
    <string name="special_offer_upgrade_now">Upgrade Now</string>
</resources>