<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/subscription_tiers" android:background="#ff003c54" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/subscribe_button_tier1" android:background="#ffcc2072" android:layout_width="fill_parent" android:layout_height="@dimen/subscribe_3rd_tier_height" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/subscribe_3rd_tier_font_size" android:textStyle="bold" android:textColor="@color/timer_text_stop_text" android:gravity="center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subscription_7_days_free_trial_button" fontPath="fonts/metric_semibold.ttf" />
            <TextView android:textSize="@dimen/subscribe_3rd_tier_font_size" android:textColor="@color/timer_text_stop_text" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/subscribe_tier1_then_per_duration" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/subscription_then_per_duration" fontPath="fonts/metric_light.ttf" />
        </LinearLayout>
    </RelativeLayout>
    <View android:background="#ff043a55" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RelativeLayout android:layout_gravity="center" android:id="@+id/subscribe_button_tier2" android:background="#ff467fc5" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/subscribe_button_font_size" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/subscribe_tier2_save_money_duration_price" android:layout_width="fill_parent" android:layout_height="@dimen/subscribe_other_tier_height" android:text="@string/subscription_tier2_textual" fontPath="fonts/metric_semibold.ttf" />
    </RelativeLayout>
    <View android:background="#ff043a55" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RelativeLayout android:id="@+id/subscribe_button_tier3" android:background="#ff255590" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/subscribe_button_font_size" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/subscribe_tier3_textual_price" android:layout_width="fill_parent" android:layout_height="@dimen/subscribe_other_tier_height" android:text="@string/subscription_tier3_textual" fontPath="fonts/metric_semibold.ttf" />
    </RelativeLayout>
    <View android:background="#ff446388" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <Button android:textStyle="normal" android:textColor="@color/White" android:id="@+id/button2" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="@dimen/restore_purchase_height" android:text="@string/restore_purchase" android:onClick="onRestorePurchaseClick" android:textAllCaps="false" />
</LinearLayout>