<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center" android:id="@+id/timer_running_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/navigation_bar_height" android:layout_marginBottom="@dimen/bottom_menu_height">
        <TextView android:textSize="@dimen/large_countdown_font_size" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/timer_text_countdown" android:background="@drawable/timer_on_puck" android:clickable="true" android:layout_width="@dimen/timer_running_puck_size" android:layout_height="@dimen/timer_running_puck_size" android:text="3:59:59" android:layout_centerHorizontal="true" fontPath="fonts/metric_thin.ttf" />
        <RelativeLayout android:gravity="center" android:id="@+id/timer_checkbox_stop_app_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/timer_checkbox_stop_app_margin_top" android:layout_below="@+id/timer_text_countdown">
            <android.support.v7.widget.AppCompatCheckBox android:textSize="@dimen/small_general_font_size" android:textColor="@color/White" android:id="@+id/timer_checkbox_stop_app" android:background="@null" android:paddingLeft="@dimen/timer_checkbox_stop_app_margin_left" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginRight="26.0dip" android:button="@drawable/timer_check_box" android:text="@string/timer_activity_checkbox_stop_app" app:theme="@style/CheckBox" />
        </RelativeLayout>
        <ipnossoft.rma.ui.button.RoundBorderedButton android:id="@+id/timer_text_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/timer_checkbox_stop_app_margin_top" android:layout_below="@+id/timer_checkbox_stop_app_container" android:layout_centerHorizontal="true" app:text="@string/timer_activity_button_stop" app:textSize="@dimen/large_general_font_size" app:backgroundDrawable="@drawable/btn" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:id="@+id/timer_selection_container" android:paddingLeft="@dimen/timer_selection_container_margin_lr" android:paddingTop="@dimen/navigation_bar_height" android:paddingRight="@dimen/timer_selection_container_margin_lr" android:paddingBottom="@dimen/main_layout_control_height" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ipnossoft.rma.timer.TimerButton android:id="@+id/timer_button_10_min" android:layout_width="fill_parent" app:number="10" app:unit="@string/timer_activity_button_minutes" style="@style/TimerButton" />
        <ipnossoft.rma.timer.TimerButton android:id="@+id/timer_button_20_min" android:layout_width="fill_parent" android:layout_below="@+id/timer_button_10_min" app:number="20" app:unit="@string/timer_activity_button_minutes" style="@style/TimerButton" />
        <ipnossoft.rma.timer.TimerButton android:id="@+id/timer_button_30_min" android:layout_width="fill_parent" android:layout_below="@+id/timer_button_20_min" app:number="30" app:unit="@string/timer_activity_button_minutes" style="@style/TimerButton" />
        <ipnossoft.rma.timer.TimerButton android:id="@+id/timer_button_1_hr" android:layout_width="fill_parent" android:layout_below="@+id/timer_button_30_min" app:number="1" app:unit="@string/timer_activity_button_hour" style="@style/TimerButton" />
        <ipnossoft.rma.timer.TimerButton android:id="@+id/timer_button_2_hr" android:layout_width="fill_parent" android:layout_below="@+id/timer_button_1_hr" app:number="2" app:unit="@string/timer_activity_button_hours" style="@style/TimerButton" />
        <RelativeLayout android:gravity="center" android:background="@drawable/btn" android:clickable="false" android:layout_width="fill_parent" android:layout_height="@dimen/timer_button_layout_height" android:layout_marginLeft="@dimen/timer_button_layout_margin_lr" android:layout_marginTop="@dimen/timer_button_layout_margin_top" android:layout_marginRight="@dimen/timer_button_layout_margin_lr" android:layout_below="@+id/timer_button_2_hr">
            <Button android:textSize="@dimen/large_general_font_size" android:textColor="@color/White" android:background="@android:color/transparent" android:padding="10.0dip" android:clickable="false" android:layout_width="fill_parent" android:layout_height="@dimen/timer_button_layout_height" android:text="@string/timer_activity_button_custom" android:textAllCaps="false" />
            <ipnossoft.rma.ui.RoundedCornerLayout android:id="@+id/timer_button_custom" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>